--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Xlicon-V3-MD",
+    "name": "Mr T-M",
     "version": "3.0",
     "description": "Whatsapp Bot By SalmanSer",
     "main": "index.js",
